--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div>
         <form method="post" action="/login.action" enctype="application/x-www-form-urlencoded">
             <label for="email">Enter your email</label>
-            <input name="email" id="email" type="email" autofocus required>
+            <input name="email" id="email" type="email" placeholder="Email" autofocus required>
             <input id="submit" type="submit" value="Login"/>
         </form>
     </div>
